# reverse-engineering-gcc-gpp-training

./: .gitignore  LICENSE  README.md  TABLE-OF-CONTENTS.md  check_env.sh  part-1-fundamentals.md  part-2-static-analysis.md  part-3-dynamic-analysis.md  part-4-advanced-techniques.md  part-5-practical-cases.md  part-6-malware.md  part-7-dotnet.md  part-8-rust-go.md  part-9-resources.md  path-mapping.md  preface.md
01-introduction-re/: 01-definition-objectives.md  02-legal-ethical-framework.md  03-legitimate-use-cases.md  04-static-vs-dynamic.md  05-methodology-tools.md  06-target-taxonomy.md  README.md  checkpoint.md
02-gnu-compilation-chain/: 01-gcc-architecture.md  02-compilation-phases.md  03-binary-formats.md  04-elf-sections.md  05-compilation-flags.md  06-dwarf-symbols.md  07-linux-loader.md  08-segments-aslr.md  09-plt-got-lazy-binding.md  README.md  checkpoint.md
03-x86-64-assembly/: 01-registers-pointers-flags.md  02-essential-instructions.md  03-arithmetic-logic.md  04-conditional-jumps.md  05-stack-prologue-epilogue.md  06-parameter-passing.md  07-reading-assembly-method.md  08-call-plt-vs-syscall.md  09-introduction-simd.md  README.md  checkpoint.md
04-work-environment/: 01-linux-distribution.md  02-tools-installation.md  03-vm-creation.md  04-vm-network-configuration.md  05-repository-structure.md  06-compiling-binaries.md  07-verify-installation.md  README.md  checkpoint.md
05-basic-inspection-tools/: 01-file-strings-xxd.md  02-readelf-objdump.md  03-nm-symbols.md  04-ldd-ldconfig.md  05-strace-ltrace.md  06-checksec.md  07-quick-triage-workflow.md  README.md  checkpoint.md
06-imhex/: 01-why-imhex.md  (+12 more)
binaries/ch33-rust/crackme_rust/: Cargo.toml
binaries/ch33-rust/crackme_rust/src/: main.rs
(+393 files in other folders)
